--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 .avtorisator {
     float: right;
+    word-break: break-all;
 }
 body {
     margin: 0;
@@ -19,6 +20,9 @@ body {
     letter-spacing: 1px;
     position: relative;
     overflow: hidden;
+}
+.button {
+    word-break: break-all;
 }
 .closing-button span {
     font-family: 'Libre Bodoni', sans-serif;
@@ -47,19 +51,22 @@ body {
     transform: translateX(0);
 }
 .img {
-    margin-top: 20%;
-    width: 100%;
+    margin-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    width: 50%;
+    height: 50%;
 }
 .info {
-    width: 50%;
-    padding: 5%;
+    padding-top: 2%;
+    padding-left: 5%;
 }
 .info1 {
     width: 70%;
     font-size: 200%;
     border-bottom: 1px solid black;
     font-family: 'Libre Bodoni', sans-serif;
-    margin-bottom: 5%;
+    margin-bottom: 1%;
     margin-right: 1%;
 }
 .info2 {
@@ -72,24 +79,11 @@ body {
     max-width: 1200px;
     padding-left: 5%;
     padding-right: 5%;
-    height: 600px;
     margin-top: 4%;
     display: inline-flex;
 }
-@media (max-width: 1200px) {
-    .content {
-        max-width: 1050px;
-    }
-}
-@media (max-width: 1060px) {
-    .content {
-        max-width: 900px;
-    }
-}
-@media (max-width: 910px) {
-    .content {
-        max-width: none;
-    }
+.mobile {
+    margin-right: 0%;
 }
 .cont {
     font-size: 20px;
@@ -125,8 +119,8 @@ body {
     padding-left: 15%;
     margin-right: 15%;
     font-family: 'Libre Bodoni', sans-serif;
+    font-size: 25px;
     padding-top: 6%;
-    font-size: 30px;
     position: absolute;
     color: white;
 }
@@ -161,8 +155,8 @@ body {
     margin-right: auto;
 }
 .elementImage {
-    width: 800px;
-    height: 450px;
+    height: 40vw;
+
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
@@ -177,6 +171,151 @@ body {
     font-family: 'Libre Bodoni', sans-serif;
     text-align: center;
 }
-.userImage {
+.row {
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-top: 1%;
     text-align: center;
+    font-family: 'Libre Bodoni', sans-serif;
+}
+.adminpanel {
+    padding-right: 25%;
+    padding-left: 25%;
+    padding-top: 1%;
+    text-align: center;
+    font-family: 'Libre Bodoni', sans-serif;
+}
+.tabletext {
+    padding-left: 25%;
+    padding-right: 25%;
+    padding-top: 10%;
+    padding-bottom: 3%;
+    text-align: center;
+    font-family: 'Libre Bodoni', sans-serif;
+}
+.userImage {
+    padding-left: 38%;
+}
+.tabl {
+    padding-left: 27%;
+}
+@media (max-width: 1350px) {
+    .closing-button {
+        height: 17px;
+        width: 100px;
+        font-size: 75%;
+        font-weight: 900;
+    }
+    .tabl {
+        padding-left: 24%;
+    }
+}
+@media (max-width: 1010px) {
+    .closing-button {
+        width: 70px;
+        height: 11px;
+        font-size: 65%;
+    }
+    .tabl {
+        padding-left: 17%;
+    }
+}
+@media (max-width: 794px) {
+    .closing-button {
+        width: 70px;
+        height: 11px;
+        font-size: 65%;
+        margin: 10px;
+    }
+    .info {
+        font-size: 60%;
+        padding-top: 10%;
+        height: 10%;
+    }
+    .img {
+        padding-top: 10%;
+        width: 90%;
+        height: 30%;
+    }
+    .img5 {
+        padding-top: 30%;
+    }
+    .text1 {
+        padding-top: 10%;
+        color: #000;
+        font-size: 15px;
+    }
+    .tabl {
+        padding-left: 10%;
+    }
+    
+}
+@media (max-width: 657px) {
+    .avtorisator {
+        float: left;
+        margin-right: 50%;
+    }
+    .closing-button {
+        width: 70px;
+        height: 11px;
+        font-size: 65%;
+        margin: 10px;
+    }
+    .userImage {
+        padding-top: 10%;
+        padding-left: 25%;
+        width: 200px;
+        height: 200px;
+    }
+    .adminpanel {
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .admininput {
+        justify-content: center;
+    }
+}
+@media (max-width: 473px) {
+    .avtorisator {
+        word-break: break-all;
+        float: right;
+        padding-right: 5px;
+        margin-right: 0%;
+    }
+    .closing-button {
+        width: 70px;
+        height: 11px;
+        font-size: 65%;
+        margin: 10px;
+    }
+    .img5 {
+        padding-top: 60%;
+    }
+    .buttonGallery1 {
+        left: 15vw;
+        top: 170vw;
+    }
+    .buttonGallery2 {
+        left: 57vw;
+        top: 170vw;
+    }
+    .img3 {
+        margin-right: 50%;
+    }
+    .img4 {
+        margin-left: 50%;
+    }
+    .tabl {
+        padding-left: 4%;
+    }
+}
+@media (max-width: 374px) {
+    .avtorisator {
+        float: right;
+        margin-right: 0%;
+    }
+    .closing-button {
+        width: 66px;
+        font-size: 65%;
+    }
 }
